Fix header margins on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body {
 /* LAYOUT */
 
 #header {
+	padding-top: 7px;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 	background-color: #ffffff;
 }
@@ -83,7 +84,7 @@ img {
 select {
 	height: 35px;
 	padding: 0 10px;
-    margin: 7px 3px;
+    margin: 0 3px 7px 3px;
     border-radius:4px;
     border: 1px solid #cccccc;
     outline: none;
